manifest: build gtkmm-3.0
Taken from https://github.com/flathub/org.synfig.SynfigStudio/blob/512f097cbc2bba1e98cd6fdf84d464bedea8c6d1/modules/gtkmm-3.0.yaml#L2

--- a/org.fontforge.FontForge.yaml
+++ b/org.fontforge.FontForge.yaml
@@ -23,6 +23,7 @@ cleanup:
   - /lib/girepository-1.0
 
 modules:
+  - gtkmm-3.0.yaml
   # We need pangoxft and it's not in the runtime
   - name: pango
     buildsystem: meson
